refactor: move `getCollection` calls to call sites

--- a/src/components/CMSGuidesNav.astro
+++ b/src/components/CMSGuidesNav.astro
@@ -1,11 +1,12 @@
 ---
-import { englishPages } from '~/content';
-import { isCmsEntry } from '~/content/config';
+import { getCollection } from 'astro:content';
+import { isCmsEntry, isEnglishEntry } from '~/content/config';
 import { isLogoKey } from '~/data/logos';
 import { getLanguageFromURL } from '~/util';
 import CardsNav from './NavGrid/CardsNav.astro';
 
 const lang = getLanguageFromURL(Astro.url.pathname);
+const englishPages = await getCollection('docs', isEnglishEntry);
 const enPages = englishPages.filter(isCmsEntry);
 
 /** Array of services we have good content for and want to show first in the list. */
