--- a/src/components/MigrationGuidesNav.astro
+++ b/src/components/MigrationGuidesNav.astro
@@ -1,10 +1,11 @@
 ---
-import { englishPages } from '~/content';
-import { isMigrationEntry } from '~/content/config';
+import { getCollection } from 'astro:content';
+import { isEnglishEntry, isMigrationEntry } from '~/content/config';
 import { isLogoKey } from '~/data/logos';
 import { getLanguageFromURL } from '~/util';
 import CardsNav from './NavGrid/CardsNav.astro';
 
+const englishPages = await getCollection('docs', isEnglishEntry);
 const lang = getLanguageFromURL(Astro.url.pathname);
 
 const enPages = englishPages.filter(isMigrationEntry);
