--- a/src/components/RecipesNav.astro
+++ b/src/components/RecipesNav.astro
@@ -1,6 +1,6 @@
 ---
-import { recipePages } from '~/content';
-import { createIsLangEntry, isEnglishEntry } from '~/content/config';
+import { getCollection } from 'astro:content';
+import { createIsLangEntry, isEnglishEntry, isRecipeEntry } from '~/content/config';
 import { getLanguageFromURL, stripLangFromSlug } from '~/util';
 import CardsNav from './NavGrid/CardsNav.astro';
 
@@ -8,9 +8,11 @@ export interface Props {
 	minimal?: boolean;
 }
 
+const pages = await getCollection('docs', isRecipeEntry);
+
 const lang = getLanguageFromURL(Astro.url.pathname);
-const langRecipes = recipePages.filter(createIsLangEntry(lang));
-const englishRecipes = recipePages.filter(isEnglishEntry);
+const langRecipes = pages.filter(createIsLangEntry(lang));
+const englishRecipes = pages.filter(isEnglishEntry);
 
 /** An array of all recipes, using translations if available and falling back to English otherwise. */
 const recipes = englishRecipes.map((fallback) => {
