--- a/src/layouts/TutorialLayout.astro
+++ b/src/layouts/TutorialLayout.astro
@@ -1,5 +1,4 @@
 ---
-import { tutorialPages as pages } from '~/content';
 import PageContent from '../components/PageContent/PageContent.astro';
 import MobileTutorialNav from '../components/tutorial/MobileTutorialNav.astro';
 import RightSidebar from '../components/tutorial/RightSidebar.astro';
@@ -7,7 +6,8 @@ import { getLanguageFromURL, stripLangFromSlug } from '../util';
 import { getPreviousAndNext } from '../util/getNavLinks';
 import { getTutorialPages, getTutorialUnits } from '../util/getTutorialPages';
 import BaseLayout from './BaseLayout.astro';
-import type { TutorialEntry } from '~/content/config';
+import { isTutorialEntry, TutorialEntry } from '~/content/config';
+import { getCollection } from 'astro:content';
 
 export interface Props {
 	content: TutorialEntry['data'];
@@ -15,6 +15,8 @@ export interface Props {
 
 const currentUrl = Astro.url.pathname.replace(/\/$/, '');
 const lang = getLanguageFromURL(Astro.url.pathname);
+
+const pages = await getCollection('docs', isTutorialEntry);
 
 const tutorialPages = getTutorialPages(pages, lang);
 const units = getTutorialUnits(tutorialPages);
