--- a/src/pages/[...enRedirectSlug].astro
+++ b/src/pages/[...enRedirectSlug].astro
@@ -1,9 +1,11 @@
 ---
 // Redirect from base to /en/ pages
-import { englishPages } from '~/content';
+import { getCollection } from 'astro:content';
+import { isEnglishEntry } from '~/content/config';
 import { stripLangFromSlug } from '~/util';
 
 export async function getStaticPaths() {
+	const englishPages = await getCollection('docs', isEnglishEntry);
 	return englishPages.map((page) => {
 		return {
 			params: {
