--- a/src/components/IntegrationsNav.astro
+++ b/src/components/IntegrationsNav.astro
@@ -1,11 +1,17 @@
 ---
-import { englishPages } from '~/content';
-import { IntegrationCategory, IntegrationEntry, isIntegrationEntry } from '~/content/config';
+import { getCollection } from 'astro:content';
+import {
+	IntegrationCategory,
+	IntegrationEntry,
+	isEnglishEntry,
+	isIntegrationEntry,
+} from '~/content/config';
 import { isLogoKey } from '~/data/logos';
 import { useTranslations } from '~/i18n/util';
 import { getLanguageFromURL } from '~/util';
 import CardsNav from './NavGrid/CardsNav.astro';
 
+const englishPages = await getCollection('docs', isEnglishEntry);
 const lang = getLanguageFromURL(Astro.url.pathname);
 
 function categoryLinksFromPages(pages: IntegrationEntry[], category: IntegrationCategory) {
