CopyButton code text in value attr

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -345,7 +345,7 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 	// Handle clicks on each button.
 	buttons.forEach((button) => {
 		button.addEventListener('click', () => {
-			alert('Test CopyButton EventHandler')
+			alert(decodeURIComponent(button.value))
 		})
 	})
 </script>
