Increase `line-height` of lists with `<kbd/>`

--- a/public/index.css
+++ b/public/index.css
@@ -95,6 +95,10 @@ nav ul {
 	margin-top: 0.5rem;
 }
 
+.content > section > :is(ul, ol) :has(kbd) {
+	line-height: 2.0;
+}
+
 .content > section > :first-child {
 	margin-top: 0;
 }
