--- a/src/components/tutorial/UnitProgressIcon.astro
+++ b/src/components/tutorial/UnitProgressIcon.astro
@@ -122,6 +122,14 @@ const t = useTranslations(Astro);
 		background-color: var(--theme-bg-offset);
 	}
 
+	:global([aria-selected='true']) .segment:not(.done) {
+		stroke: hsl(var(--color-gray-20));
+	}
+
+	:global(.theme-dark [aria-selected='true']) .segment:not(.done) {
+		stroke: hsl(var(--color-gray-70));
+	}
+
 	.segment {
 		fill: none;
 		stroke: var(--theme-bg-offset);
