--- a/public/index.css
+++ b/public/index.css
@@ -95,10 +95,6 @@ nav ul {
 	margin-top: 0.5rem;
 }
 
-.content > section > :is(ul, ol) :has(kbd) {
-	line-height: 2.0;
-}
-
 .content > section > :first-child {
 	margin-top: 0;
 }
@@ -238,8 +234,8 @@ h5 {
 }
 
 p,
-.content ul {
-	line-height: 1.65;
+.content ul, .content ol {
+	line-height: 1.75;
 }
 
 p,
@@ -364,9 +360,9 @@ pre {
 	font-family: var(--font-body);
 	font-size: 0.9375rem;
 	border-radius: 0.25rem;
-	padding: 0.125rem 0.375rem;
+	padding: 0.0625rem 0.375rem;
 	border: 1px solid var(--theme-shade-subtle);
-	box-shadow: 0 3px var(--theme-shade-subtle);
+	box-shadow: 0 2px var(--theme-shade-subtle);
 	background-color: var(--theme-bg-offset);
 	white-space: nowrap;
 }
