Fix double outline issue in Firefox

--- a/src/components/tutorial/TutorialNav.astro
+++ b/src/components/tutorial/TutorialNav.astro
@@ -108,6 +108,7 @@ const isCurrentUnit = (unit: typeof units[number]) =>
 
 	:global(a:focus unit-progress-icon) {
 		outline: 2px solid var(--theme-accent-secondary);
+		outline-offset: 0.25em;
 	}
 
 	.header-link {
