Add icon to copy-button

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -265,7 +265,8 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 
 			.copy-button {
 				position: absolute;
-				right: 1rem;
+				top: 0.5rem;
+				right: 0.5rem;
 				cursor: pointer;
 				border-radius: 0.4rem;
 				visibility: hidden;
