Remove alerts and add success and error styling for copy-button

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -274,6 +274,15 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 				-moz-transition: visibility 0s, opacity 0.3s linear;
 				-o-transition: visibility 0s, opacity 0.3s linear;
 				transition: visibility 0s, opacity 0.3s linear;
+				border: solid;
+
+				&-success {
+					color: rgb(34 197 94);
+				}
+
+				&-error {
+					color: rgb(239 68 68);
+				}
 			}
 			
 			&:hover {
@@ -346,10 +355,16 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 		button.addEventListener('click', async () => {
 			const codeText = decodeURIComponent(button.value)
 			try {
-				await navigator.clipboard.writeText(codeText)
-				alert("Content copied to clipboard:\n" + codeText)
+				await navigator.clipboard.writeText(codeText)	
+				button.classList.add("copy-button-success")
+				setTimeout(() => {
+					button.classList.remove("copy-button-success")
+				}, 3000)
 			} catch (err) {
-				alert("Failed to copy: " + err)
+				button.classList.add("copy-button-error")
+				setTimeout(() => {
+					button.classList.remove("copy-button-error")
+				}, 3000)
 			}
 		})
 	})
