Set opacity to 1 on code block focus

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -290,6 +290,12 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 					opacity: 1;
 				}
 			}
+
+			&:focus {
+				.copy-button {
+					opacity: 1;
+				}
+			}
 		}
 
 		&.has-title {
