Add typing for HTMLButtonElements

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -354,7 +354,7 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 </figure>
 <script>
 	// Find all buttons with the \`copy-button\` class on page.
-	const buttons = document.querySelectorAll('button.copy-button');
+	const buttons = document.querySelectorAll('button.copy-button') as NodeListOf<HTMLButtonElement>;
 	
 	// Handle clicks on each button.
 	buttons.forEach((button) => {
