Encode form text in issue prefil query string
Co-authored-by: Reuben Tier <64310361+TheOtterlord@users.noreply.github.com>

--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -162,7 +162,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 			// Pre-fills the GitHub issue with any message a site visitor has already typed in the message box
 			githubButton?.addEventListener('click', () => {
 				if (form.text.value) 
-					githubButton.href = `https://github.com/withastro/docs/issues/new?body=${form.text.value}`
+					githubButton.href = `https://github.com/withastro/docs/issues/new?body=${encodeURIComponent(form.text.value)}`
 			})
 
 
