--- a/src/components/tutorial/FeedbackButton.astro
+++ b/src/components/tutorial/FeedbackButton.astro
@@ -161,8 +161,14 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 
 			// Pre-fills the GitHub issue with any message a site visitor has already typed in the message box
 			githubButton?.addEventListener('click', () => {
-				if (form.text.value) 
-					githubButton.href = `https://github.com/withastro/docs/issues/new?body=${encodeURIComponent(form.text.value)}`
+				const newIssueUrl = new URL('https://github.com/withastro/docs/issues/new');
+				const titles = { issue: '⚠️ Issue', idea: '💡 Idea', other: '🐠 Feedback' };
+				if (form.category.value in titles) {
+					const title = titles[form.category.value as keyof typeof titles];
+					newIssueUrl.searchParams.set('title', title);
+				}
+				if (form.text.value) newIssueUrl.searchParams.set('body', form.text.value);
+				githubButton.href = newIssueUrl.href;
 			})
 
 
