--- a/src/components/RightSidebar/ContributeMenu.astro
+++ b/src/components/RightSidebar/ContributeMenu.astro
@@ -20,7 +20,7 @@ const isTranslatable = (lang === 'en' || isFallback) && i18nReady;
 	<li>
 		<a
 			class={`header-link depth-2`}
-			href=`/${lang}/contribute/`
+			href={`/${lang}/contribute/`}
 		>
 			<svg
 					xmlns="http://www.w3.org/2000/svg"
