--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -18,7 +18,11 @@ function convertSlug(slug: string) {
 
 const slugs = Astro.props.slugs.map(convertSlug);
 
-const entries = await Promise.all(slugs.map((slug) => getEntryBySlug('docs', slug)));
+const entries = await Promise.all(slugs.map(async (slug, i) => {
+  let entry = await getEntryBySlug('docs', slug)
+  if (!entry) throw Error(`Could not find entry for slug "${Astro.props.slugs[i]}"`)
+  return entry
+}));
 
 const isList = entries.length > 1;
 const noun = isList ? 'recipes' : 'recipe';
