Address css qa feedback

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -270,10 +270,7 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 				cursor: pointer;
 				border-radius: 0.4rem;
 				opacity: 0.2;
-				-webkit-transition: visibility 0s, opacity 0.3s linear;
-				-moz-transition: visibility 0s, opacity 0.3s linear;
-				-o-transition: visibility 0s, opacity 0.3s linear;
-				transition: visibility 0s, opacity 0.3s linear;
+				transition: opacity 0.3s linear;
 				border: solid;
 
 				&-success {
@@ -285,13 +282,8 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 				}
 			}
 			
+			&:focus,
 			&:hover {
-				.copy-button {
-					opacity: 1;
-				}
-			}
-
-			&:focus {
 				.copy-button {
 					opacity: 1;
 				}
