Translate copyButton title

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -1,5 +1,6 @@
 ---
 import rangeParser from 'parse-numeric-range';
+import { useTranslations } from '../../i18n/util';
 import { ShikiBlock } from './shiki-block';
 import {
 	InlineMarkingDefinition,
@@ -7,6 +8,9 @@ import {
 	MarkerType,
 	MarkerTypeOrder,
 } from './types';
+
+const t = useTranslations(Astro);
+const copyButtonTitle = t('copyButton.title');
 
 export interface Props {
 	lang?: string;
@@ -104,7 +108,7 @@ function applyMarkings(
 		};
 	});
 
-	const shikiBlock = new ShikiBlock(highlightedCodeHtml);
+	const shikiBlock = new ShikiBlock(highlightedCodeHtml, copyButtonTitle);
 	shikiBlock.applyMarkings(lineMarkings, inlineMarkings);
 	return shikiBlock.renderToHtml();
 }
@@ -281,7 +285,7 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 					color: rgb(239 68 68);
 				}
 			}
-			
+
 			&:focus,
 			&:hover {
 				.copy-button {
@@ -347,23 +351,23 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 <script>
 	// Find all buttons with the \`copy-button\` class on page.
 	const buttons = document.querySelectorAll('button.copy-button') as NodeListOf<HTMLButtonElement>;
-	
+
 	// Handle clicks on each button.
 	buttons.forEach((button) => {
 		button.addEventListener('click', async () => {
-			const codeText = decodeURIComponent(button.value)
+			const codeText = decodeURIComponent(button.value);
 			try {
-				await navigator.clipboard.writeText(codeText)	
-				button.classList.add("copy-button-success")
+				await navigator.clipboard.writeText(codeText);
+				button.classList.add('copy-button-success');
 				setTimeout(() => {
-					button.classList.remove("copy-button-success")
-				}, 3000)
+					button.classList.remove('copy-button-success');
+				}, 3000);
 			} catch (err) {
-				button.classList.add("copy-button-error")
+				button.classList.add('copy-button-error');
 				setTimeout(() => {
-					button.classList.remove("copy-button-error")
-				}, 3000)
+					button.classList.remove('copy-button-error');
+				}, 3000);
 			}
-		})
-	})
+		});
+	});
 </script>
