--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -271,29 +271,61 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 				}
 			}
 
-			.copy-button {
+			.copy-button-wrapper {
+				display: flex;
+				flex-direction: row-reverse;
 				position: absolute;
 				top: 0.5rem;
 				right: 0.5rem;
-				cursor: pointer;
-				border-radius: 0.4rem;
-				opacity: 0.2;
-				transition: opacity 0.3s linear;
-				border: solid;
 
-				&-success {
-					color: rgb(34 197 94);
-				}
-
-				&-error {
-					color: rgb(239 68 68);
-				}
-			}
-
-			&:focus,
-			&:hover {
 				.copy-button {
-					opacity: 1;
+					cursor: pointer;
+					border-radius: 0.4rem;
+					opacity: 0.2;
+					transition: opacity 0.3s linear;
+					border: solid;
+					align-self: flex-end;
+					width: 3rem;
+
+					&-success {
+						color: rgb(34 197 94);
+					}
+
+					&-error {
+						color: rgb(239 68 68);
+					}
+				}
+
+				&:focus,
+				&:hover {
+					.copy-button {
+						opacity: 1;
+					}
+				}
+
+				.copy-button-tooltip {
+					align-self: center;
+					background-color: buttonface;
+					height: 1.5rem;
+					padding: 0 0.5rem;
+					border-radius: 0.3rem;
+					margin-right: 0.5rem;
+					opacity: 0;
+					transition: opacity 0.3s linear;
+
+					&::after {
+						position: absolute;
+						content: "";
+						border-width: 0.5rem;
+						border-color: transparent transparent transparent buttonface;
+						border-style: solid;
+						transform: translateX(25%) translateY(25%);
+					}
+
+					&-visible {
+						opacity: 0.8;
+						transition: opacity 0.3s linear;
+					}
 				}
 			}
 		}
@@ -373,6 +405,11 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 				button.classList.add('copy-button-success');
 				setTimeout(() => {
 					button.classList.remove('copy-button-success');
+				}, 3000);
+
+				button.nextElementSibling?.classList.add('copy-button-tooltip-visible');
+				setTimeout(() => {
+					button.nextElementSibling?.classList.remove('copy-button-tooltip-visible');
 				}, 3000);
 			} catch (err) {
 				button.classList.add('copy-button-error');
