Move tooltip text to en/ui

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -11,6 +11,7 @@ import {
 
 const t = useTranslations(Astro);
 const copyButtonTitle = t('copyButton.title');
+const copyButtonTooltip = t('copyButton.tooltip');
 
 export interface Props {
 	lang?: string;
@@ -108,7 +109,7 @@ function applyMarkings(
 		};
 	});
 
-	const shikiBlock = new ShikiBlock(highlightedCodeHtml, copyButtonTitle);
+	const shikiBlock = new ShikiBlock(highlightedCodeHtml, {copyButtonTitle, copyButtonTooltip});
 	shikiBlock.applyMarkings(lineMarkings, inlineMarkings);
 	return shikiBlock.renderToHtml();
 }
