implement Ximena's design

--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -18,20 +18,26 @@ function convertSlug(slug: string) {
 
 const slugs = Astro.props.slugs.map(convertSlug);
 
-const entries = await Promise.all(slugs.map(async (slug, i) => {
-  let entry = await getEntryBySlug('docs', slug)
-  if (!entry) throw Error(`Could not find entry for slug "${Astro.props.slugs[i]}"`)
-  return entry
-}));
+const entries = await Promise.all(
+	slugs.map(async (slug, i) => {
+		let entry = await getEntryBySlug('docs', slug);
+		if (!entry) throw Error(`Could not find entry for slug "${Astro.props.slugs[i]}"`);
+		return entry;
+	})
+);
 
 const isList = entries.length > 1;
 const noun = isList ? 'recipes' : 'recipe';
 ---
 
-<p>
-	🧑‍🍳 See related {noun}:
+<div class="root">
+	<div class="flex">
+		<img src="/houston_chef.png" width="26" alt="Chef Houston" />
+		<span class="title">Related {noun}:</span>
+		{!isList && <a href={`/${entries[0]!.slug}/`}> {entries[0]!.data.title}</a>}
+	</div>
 	{
-		isList ? (
+		isList && (
 			<ul>
 				{entries.map((entry) => (
 					<li>
@@ -39,8 +45,32 @@ const noun = isList ? 'recipes' : 'recipe';
 					</li>
 				))}
 			</ul>
-		) : (
-			<a href={`/${entries[0]!.slug}/`}>{entries[0]!.data.title}</a>
 		)
 	}
-</p>
+</div>
+
+<style>
+	.title {
+		font-weight: 600;
+		font-size: 1.25rem;
+		color: #c7c5d3;
+	}
+	.flex {
+		display: flex;
+		align-items: center;
+	}
+	.flex > * {
+		margin-right: 0.25rem;
+	}
+	.flex > img {
+		margin-right: 0.5rem;
+	}
+	ul {
+		margin-left: 0.5rem;
+	}
+	div.root {
+		background-color: rgba(90, 59, 134, 0.15);
+		border-radius: 8px;
+		padding: 24px;
+	}
+</style>
