another recipe link

--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -27,7 +27,7 @@ const entries = await Promise.all(
 );
 
 const isList = entries.length > 1;
-const noun = isList ? 'recipes' : 'recipe';
+const noun = isList ? 'Recipes' : 'Recipe';
 ---
 
 <div class="root">
@@ -52,7 +52,7 @@ const noun = isList ? 'recipes' : 'recipe';
 <style>
 	.title {
 		font-weight: 600;
-		font-size: 1.25rem;
+		font-size: 1rem;
 		color: #c7c5d3;
 	}
 	.flex {
