--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -27,7 +27,7 @@ const entries = await Promise.all(
 );
 
 const isList = entries.length > 1;
-const noun = isList ? 'Recipes' : 'Recipe';
+const noun = isList ? 'recipes' : 'recipe';
 ---
 
 <div class="root">
