--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -1,22 +1,12 @@
 ---
 import { getEntryBySlug } from 'astro:content';
+import { removeLeadingSlash, removeTrailingSlash } from '~/util';
 
 export interface Props {
 	slugs: string[];
 }
 
-function convertSlug(slug: string) {
-	let corrected = slug;
-	if (slug.startsWith('/')) {
-		corrected = corrected.slice(1);
-	}
-	if (slug.endsWith('/')) {
-		corrected = corrected.slice(0, -1);
-	}
-	return corrected;
-}
-
-const slugs = Astro.props.slugs.map(convertSlug);
+const slugs = Astro.props.slugs.map((slug) => removeLeadingSlash(removeTrailingSlash(slug)));
 
 const entries = await Promise.all(
 	slugs.map(async (slug, i) => {
