--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -48,12 +48,10 @@ const noun = isList ? 'recipes' : 'recipe';
 	.flex {
 		display: flex;
 		align-items: center;
-	}
-	.flex > * {
-		margin-right: 0.25rem;
+		gap: 0.25rem;
 	}
 	.flex > img {
-		margin-right: 0.5rem;
+		margin-right: 0.25rem;
 	}
 	ul {
 		margin-left: 0.5rem;
