--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -10,7 +10,7 @@ const slugs = Astro.props.slugs.map((slug) => removeLeadingSlash(removeTrailingS
 
 const entries = await Promise.all(
 	slugs.map(async (slug, i) => {
-		let entry = await getEntryBySlug('docs', slug);
+		const entry = await getEntryBySlug('docs', slug);
 		if (!entry) throw Error(`Could not find entry for slug "${Astro.props.slugs[i]}"`);
 		return entry;
 	})
