--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -11,7 +11,9 @@ const slugs = Astro.props.slugs.map((slug) => removeLeadingSlash(removeTrailingS
 const entries = await Promise.all(
 	slugs.map(async (slug, i) => {
 		const entry = await getEntryBySlug('docs', slug);
-		if (!entry) throw Error(`Could not find entry for slug "${Astro.props.slugs[i]}"`);
+		if (!entry) {
+			throw new Error(`Could not find entry for slug "${Astro.props.slugs[i]}"`);
+		}
 		return entry;
 	})
 );
