--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -54,7 +54,7 @@ const noun = isList ? 'recipes' : 'recipe';
 		margin-left: 0.5rem;
 	}
 	div.root {
-		background-color: rgba(90, 59, 134, 0.15);
+		background-color: var(--theme-bg-offset);
 		border-radius: 8px;
 		padding: 24px;
 	}
