--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -57,5 +57,7 @@ const noun = isList ? 'recipes' : 'recipe';
 		background-color: var(--theme-bg-offset);
 		border-radius: 8px;
 		padding: 24px;
+		width: max-content;
+		max-with: 100%;
 	}
 </style>
