--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -24,7 +24,7 @@ const noun = isList ? 'recipes' : 'recipe';
 
 <div class="root">
 	<div class="flex">
-		<img src="/houston_chef.png" width="26" alt="Chef Houston" />
+		<img src="/houston_chef.png" width="26" alt="" />
 		<strong>Related {noun}:</strong>
 		{!isList && <a href={`/${entries[0]!.slug}/`}> {entries[0]!.data.title}</a>}
 	</div>
