--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -53,7 +53,7 @@ const noun = isList ? 'recipes' : 'recipe';
 	ul {
 		margin-left: 0.5rem;
 	}
-	div.root {
+	.root {
 		background-color: var(--theme-bg-offset);
 		border-radius: 8px;
 		padding: 24px;
