--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -45,6 +45,7 @@ const noun = isList ? 'recipes' : 'recipe';
 	.flex {
 		display: flex;
 		align-items: center;
+		flex-wrap: wrap;
 		gap: 0.25rem;
 	}
 	.flex > img {
