Fix `max-width` typo

--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -59,6 +59,6 @@ const noun = isList ? 'recipes' : 'recipe';
 		border-radius: 8px;
 		padding: 24px;
 		width: max-content;
-		max-with: 100%;
+		max-width: 100%;
 	}
 </style>
