rename BaaS to backend everywhere

--- a/src/components/BackendGuidesNav.astro
+++ b/src/components/BackendGuidesNav.astro
@@ -1,15 +1,15 @@
 ---
 import { englishPages } from '~/content';
-import { isBaasEntry } from '~/content/config';
+import { isBackendEntry } from '~/content/config';
 import { isLogoKey } from '~/data/logos';
 import { getLanguageFromURL } from '../util';
 import CardsNav from './NavGrid/CardsNav.astro';
 
 const lang = getLanguageFromURL(Astro.url.pathname);
-const enPages = englishPages.filter(isBaasEntry);
+const enPages = englishPages.filter(isBackendEntry);
 
 /** Array of services we have good content for and want to show first in the list. */
-const showFirst = ['Appwrite.io', 'Firebase'];
+const showFirst = ['Firebase'];
 // Reverse the array to make our logic simpler later.
 showFirst.reverse();
 
@@ -33,20 +33,20 @@ const links = enPages
 	});
 ---
 
-<section class="baas-nav">
+<section class="backend-nav">
 	<CardsNav minimal links={links} />
 </section>
 
 <style>
-	.baas-nav > :global(*) {
+	.backend-nav > :global(*) {
 		margin-top: -2rem;
 	}
 
-	.baas-nav > :global(* + *) {
+	.backend-nav > :global(* + *) {
 		margin-top: -3rem;
 	}
 
-	.baas-nav :global(.scope) {
+	.backend-nav :global(.scope) {
 		font-weight: normal;
 		color: var(--theme-text-lighter);
 	}
