--- a/src/layouts/BackendLayout.astro
+++ b/src/layouts/BackendLayout.astro
@@ -1,14 +1,14 @@
 ---
 import type { MarkdownHeading } from 'astro';
 import Aside from '~/components/Aside.astro';
-import BackendAsAServiceGuidesNav from '~/components/BackendAsAServiceGuidesNav.astro';
+import BackendGuidesNav from '~/components/BackendGuidesNav.astro';
 import UIString from '~/components/UIString.astro';
-import type { BaasEntry } from '~/content/config';
+import type { BackendEntry } from '~/content/config';
 import { getGithubEditUrl } from '~/util/getGithubEditUrl';
 import MainLayout from './MainLayout.astro';
 
 export interface Props {
-	content: BaasEntry['data'];
+	content: BackendEntry['data'];
 	headings: MarkdownHeading[];
 }
 
@@ -24,15 +24,15 @@ const {
 		stub && (
 			<Aside title="Expand this stub!">
 				This guide is a stub. <br />
-				Know more about how to use this Backend as a Service with Astro?{' '}
+				Know more about how to use this backend service with Astro?{' '}
 				<a href={githubEditUrl} target="_blank">
 					<UIString key="rightSidebar.editPage" />
 				</a>
 			</Aside>
 		)
 	}
-	<h2><UIString key="baas.navTitle" /></h2>
-	<BackendAsAServiceGuidesNav minimal />
+	<h2><UIString key="backend.navTitle" /></h2>
+	<BackendGuidesNav minimal />
 </MainLayout>
 
 <style>
