--- a/src/layouts/LayoutSwitcher.astro
+++ b/src/layouts/LayoutSwitcher.astro
@@ -1,7 +1,7 @@
 ---
 import type { MarkdownHeading } from 'astro';
 import type { CollectionEntry } from 'astro:content';
-import BackendAsAServiceLayout from '~/layouts/BackendAsAServiceLayout.astro';
+import BackendLayout from '~/layouts/BackendLayout.astro';
 import CMSLayout from '~/layouts/CMSLayout.astro';
 import DeployGuideLayout from '~/layouts/DeployGuideLayout.astro';
 import IntegrationLayout from '~/layouts/IntegrationLayout.astro';
@@ -19,10 +19,10 @@ const { data, headings } = Astro.props;
 ---
 
 {
-	data.type === 'baas' ? (
-		<BackendAsAServiceLayout content={data} headings={headings}>
+	data.type === 'backend' ? (
+		<BackendLayout content={data} headings={headings}>
 			<slot />
-		</BackendAsAServiceLayout>
+		</BackendLayout>
 	) : data.type === 'cms' ? (
 		<CMSLayout content={data} headings={headings}>
 			<slot />
