Clean up lint errors

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -109,7 +109,7 @@ function applyMarkings(
 		};
 	});
 
-	const shikiBlock = new ShikiBlock(highlightedCodeHtml, {copyButtonTitle, copyButtonTooltip});
+	const shikiBlock = new ShikiBlock(highlightedCodeHtml, { copyButtonTitle, copyButtonTooltip });
 	shikiBlock.applyMarkings(lineMarkings, inlineMarkings);
 	return shikiBlock.renderToHtml();
 }
@@ -316,7 +316,7 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 
 					&::after {
 						position: absolute;
-						content: "";
+						content: '';
 						border-width: 0.5rem;
 						border-color: transparent transparent transparent buttonface;
 						border-style: solid;
@@ -395,35 +395,28 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 </figure>
 <script>
 	// Find all buttons with the \`copy-button\` class on page.
-	const buttons = document.querySelectorAll('button.copy-button') as NodeListOf<HTMLButtonElement>;
+	const buttons = document.querySelectorAll<HTMLButtonElement>('button.copy-button');
 
-	// Reset timeouts on button reclick.
-	let buttonTimeout: NodeJS.Timeout, tooltipTimeout: NodeJS.Timeout;
+	/** Store timeout to clear when button is repeatedly clicked. */
+	let copyTimeout: any;
 
 	// Handle clicks on each button.
 	buttons.forEach((button) => {
 		button.addEventListener('click', async () => {
 			const codeText = decodeURIComponent(button.value);
 			try {
-				clearTimeout(buttonTimeout);
-				clearTimeout(tooltipTimeout);
-
+				clearTimeout(copyTimeout);
 				await navigator.clipboard.writeText(codeText);
-
 				button.classList.add('copy-button-success');
-				buttonTimeout = setTimeout(() => {
-					button.classList.remove('copy-button-success');
-				}, 3000);
-
 				button.nextElementSibling?.classList.add('copy-button-tooltip-visible');
-				tooltipTimeout = setTimeout(() => {
+				copyTimeout = setTimeout(() => {
+					button.classList.remove('copy-button-success');
 					button.nextElementSibling?.classList.remove('copy-button-tooltip-visible');
 				}, 3000);
 			} catch (err) {
-				clearTimeout(buttonTimeout);
-
+				clearTimeout(copyTimeout);
 				button.classList.add('copy-button-error');
-				buttonTimeout = setTimeout(() => {
+				copyTimeout = setTimeout(() => {
 					button.classList.remove('copy-button-error');
 				}, 3000);
 			}
