Tweak copy button styles

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -271,66 +271,72 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 					}
 				}
 			}
+		}
 
-			.copy-button-wrapper {
+		.copy-button-wrapper {
+			display: flex;
+			flex-direction: row-reverse;
+			position: absolute;
+			top: 0.5rem;
+			right: 0.5rem;
+
+			.copy-button {
 				display: flex;
-				flex-direction: row-reverse;
-				position: absolute;
-				top: 0.5rem;
-				right: 0.5rem;
+				cursor: pointer;
+				border-radius: 0.4rem;
+				transition: opacity 0.15s linear;
+				border: var(--glow-border);
+				padding: 0.4375rem;
+				align-self: flex-end;
+				background-color: var(--theme-code-bg);
+				color: var(--theme-code-text);
+				opacity: 0;
 
-				.copy-button {
-					cursor: pointer;
-					border-radius: 0.4rem;
-					opacity: 0.2;
-					transition: opacity 0.3s linear;
-					border: solid;
-					align-self: flex-end;
-					width: 3rem;
+				&-success {
+					color: rgb(34 197 94);
+				}
 
-					&-success {
-						color: rgb(34 197 94);
-					}
-
-					&-error {
-						color: rgb(239 68 68);
-					}
+				&-error {
+					color: rgb(239 68 68);
 				}
 
 				&:focus,
 				&:hover {
-					.copy-button {
-						opacity: 1;
-					}
-				}
-
-				.copy-button-tooltip {
-					align-self: center;
-					background-color: buttonface;
-					height: 1.5rem;
-					padding: 0 0.5rem;
-					border-radius: 0.3rem;
-					margin-right: 0.5rem;
-					opacity: 0;
-					transition: opacity 0.3s linear;
-
-					&::after {
-						position: absolute;
-						content: '';
-						border-width: 0.5rem;
-						border-color: transparent transparent transparent buttonface;
-						border-style: solid;
-						transform: translateX(25%) translateY(25%);
-					}
-
-					&-visible {
-						opacity: 0.8;
-						transition: opacity 0.3s linear;
-					}
+					border-color: currentColor;
 				}
 			}
 		}
+		&:focus-within,
+		&:hover {
+			.copy-button {
+				opacity: 1;
+			}
+		}
 
+		.copy-button-tooltip {
+			align-self: center;
+			background-color: buttonface;
+			height: 1.5rem;
+			padding: 0 0.5rem;
+			border-radius: 0.3rem;
+			margin-right: 0.5rem;
+			opacity: 0;
+			transition: opacity 0.15s linear;
+
+			&::after {
+				position: absolute;
+				content: '';
+				border-width: 0.5rem;
+				border-color: transparent transparent transparent buttonface;
+				border-style: solid;
+				transform: translateX(25%) translateY(25%);
+			}
+
+			&-visible {
+				opacity: 0.8;
+				transition: opacity 0.15s linear;
+			}
+		}
 		&.has-title {
 			& .header {
 				display: inline-block;
