Make sure copy action is announced to screen readers

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -314,13 +314,13 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 		}
 
 		.copy-button-tooltip {
+			display: none;
 			align-self: center;
 			background-color: buttonface;
 			height: 1.5rem;
 			padding: 0 0.5rem;
 			border-radius: 0.3rem;
 			margin-right: 0.5rem;
-			opacity: 0;
 			transition: opacity 0.15s linear;
 
 			&::after {
@@ -333,8 +333,7 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 			}
 
 			&-visible {
-				opacity: 0.8;
-				transition: opacity 0.15s linear;
+				display: block;
 			}
 		}
 		&.has-title {
