Use theme colours

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -293,11 +293,11 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 				opacity: 0;
 
 				&-success {
-					color: rgb(34 197 94);
+					color: hsl(var(--color-green));
 				}
 
 				&-error {
-					color: rgb(239 68 68);
+					color: hsl(var(--color-red));
 				}
 
 				&:focus,
