Only hide button on hover-capable devices

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -286,11 +286,16 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 				border-radius: 0.4rem;
 				transition: opacity 0.15s linear;
 				border: var(--glow-border);
-				padding: 0.4375rem;
+				padding: 0.375rem;
 				align-self: flex-end;
 				background-color: var(--theme-code-bg);
 				color: var(--theme-code-text);
-				opacity: 0;
+
+				@media (hover: hover) {
+					& {
+						opacity: 0;
+					}
+				}
 
 				&-success {
 					color: hsl(var(--color-green));
