Don’t scroll copy button with code if code overflows

--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -145,6 +145,7 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 <style lang="scss" is:global>
 	.code-snippet {
 		--glow-border: 1px solid var(--theme-glow-highlight);
+		position: relative;
 
 		.header,
 		pre {
@@ -277,7 +278,7 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 			display: flex;
 			flex-direction: row-reverse;
 			position: absolute;
-			top: 0.5rem;
+			top: calc(0.5rem + var(--code-header-height, 0px));
 			right: 0.5rem;
 
 			.copy-button {
@@ -342,6 +343,8 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 			}
 		}
 		&.has-title {
+			--code-header-height: 2rem;
+
 			& .header {
 				display: inline-block;
 			}
@@ -354,6 +357,7 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 		&.is-terminal {
 			--theme-glow-highlight: rgba(255, 255, 255, 0.2);
 			--theme-glow-diffuse: rgba(0, 0, 0, 0.4);
+			--code-header-height: 1.75rem;
 
 			& .header {
 				display: flex;
