--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -276,10 +276,11 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 
 		.copy-button-wrapper {
 			display: flex;
+			gap: 0.25rem;
 			flex-direction: row-reverse;
 			position: absolute;
 			top: calc(0.5rem + var(--code-header-height, 0px));
-			right: 0.5rem;
+			inset-inline-end: 0.5rem;
 
 			.copy-button {
 				display: flex;
@@ -320,22 +321,25 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 		}
 
 		.copy-button-tooltip {
+			--tooltip-arrow-size: 0.375rem;
+			--tooltip-bg: var(--theme-dim);
 			display: none;
+			position: relative;
 			align-self: center;
-			background-color: buttonface;
-			height: 1.5rem;
-			padding: 0 0.5rem;
+			background-color: var(--tooltip-bg);
+			color: var(--theme-text);
+			font-size: var(--theme-text-sm);
+			padding: 0.125rem 0.5rem;
 			border-radius: 0.3rem;
-			margin-right: 0.5rem;
-			transition: opacity 0.15s linear;
+			margin-inline-end: var(--tooltip-arrow-size);
 
 			&::after {
-				position: absolute;
 				content: '';
-				border-width: 0.5rem;
-				border-color: transparent transparent transparent buttonface;
-				border-style: solid;
-				transform: translateX(25%) translateY(25%);
+				position: absolute;
+				inset-inline-end: calc(-2 * var(--tooltip-arrow-size));
+				border: var(--tooltip-arrow-size) solid transparent;
+				border-inline-start-color: var(--tooltip-bg);
+				transform: translateY(50%);
 			}
 
 			&-visible {
