--- a/src/components/CodeSnippet/CodeSnippet.astro
+++ b/src/components/CodeSnippet/CodeSnippet.astro
@@ -287,7 +287,7 @@ function parseMarkingDefinition(serializedArr: string, parts: RegExp, parseError
 				cursor: pointer;
 				border-radius: 0.4rem;
 				transition: opacity 0.15s linear;
-				border: var(--glow-border);
+				border: 1px solid var(--theme-dim);
 				padding: 0.375rem;
 				align-self: flex-end;
 				background-color: var(--theme-code-bg);
