--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -21,7 +21,7 @@ const title = content.title
 	.replaceAll('-', '&#8288;-&#8288;');
 const isFallback = !!Astro.params.fallback || undefined;
 const outdated =
-	(Astro.params.lang === 'en' && !Astro.params.fallback)
+	(Astro.params.lang === 'en' || Astro.params.fallback)
 		? false
 		: await isOutdated(
 				(
