Improve `<RecipeLinks>` i18n support

--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -1,6 +1,7 @@
 ---
 import { recipePages } from '~/content';
 import { getLanguageFromURL, stripLangFromSlug } from '~/util';
+import UIString from './UIString.astro';
 
 export interface Props {
 	slugs: string[];
@@ -24,7 +25,6 @@ const recipes = Astro.props.slugs.map((slug) => {
 });
 
 const isList = recipes.length > 1;
-const noun = isList ? 'recipes' : 'recipe';
 const firstRecipe = recipes[0];
 if (!firstRecipe) {
 	throw new Error('No slugs passed to `<RecipeLinks>` component. Make sure you pass at least one.');
@@ -34,7 +34,11 @@ if (!firstRecipe) {
 <div class="root">
 	<div class="flex">
 		<img src="/houston_chef.webp" width="26" alt="" />
-		<strong>Related {noun}:</strong>
+		<strong
+			>{
+				isList ? <UIString key="recipesLink.plural" /> : <UIString key="recipesLink.singular" />
+			}</strong
+		>
 		{
 			!isList && (
 				<a href={`/${firstRecipe.entry.slug}/`}>
