--- a/src/components/RecipeLinks.astro
+++ b/src/components/RecipeLinks.astro
@@ -25,6 +25,7 @@ const recipes = Astro.props.slugs.map((slug) => {
 });
 
 const isList = recipes.length > 1;
+const labelKey = isList ? 'recipesLink.plural' : 'recipesLink.singular';
 const firstRecipe = recipes[0];
 if (!firstRecipe) {
 	throw new Error('No slugs passed to `<RecipeLinks>` component. Make sure you pass at least one.');
@@ -34,11 +35,7 @@ if (!firstRecipe) {
 <div class="root">
 	<div class="flex">
 		<img src="/houston_chef.webp" width="26" alt="" />
-		<strong
-			>{
-				isList ? <UIString key="recipesLink.plural" /> : <UIString key="recipesLink.singular" />
-			}</strong
-		>
+		<strong><UIString key={labelKey} /></strong>
 		{
 			!isList && (
 				<a href={`/${firstRecipe.entry.slug}/`}>
