--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -20,14 +20,13 @@ const title = content.title
 	.replace('@astrojs/', '<span class="scope">@astrojs/</span><wbr>')
 	.replaceAll('-', '&#8288;-&#8288;');
 const isFallback = !!Astro.params.fallback || undefined;
-const outdated =
-	Astro.params.lang === 'en' || Astro.params.fallback
-		? false
-		: await isOutdated(
-				(
-					await getEntryBySlug('docs', `${Astro.params.lang}/${Astro.params.slug}`)
-				)?.id!
-		  );
+let outdated: boolean;
+if (Astro.params.lang === 'en' || Astro.params.fallback) {
+	outdated = false;
+} else {
+	const currentEntry = await getEntryBySlug('docs', `${Astro.params.lang}/${Astro.params.slug}`);
+	outdated = await isOutdated(currentEntry?.id!);
+}
 const lang = getLanguageFromURL(Astro.url.pathname);
 const bcpLang = normalizeLangTag(lang);
 const direction = rtlLanguages.has(lang) ? 'rtl' : 'ltr';
