infra built! - next, LeftSidebar highlighting

--- a/src/layouts/LayoutSwitcher.astro
+++ b/src/layouts/LayoutSwitcher.astro
@@ -8,6 +8,7 @@ import IntegrationLayout from '~/layouts/IntegrationLayout.astro';
 import MainLayout from '~/layouts/MainLayout.astro';
 import MigrationLayout from '~/layouts/MigrationLayout.astro';
 import TutorialLayout from '~/layouts/TutorialLayout.astro';
+import IslandsLayout from '~/layouts/IslandsLayout.astro';
 import RecipeLayout from './RecipeLayout.astro';
 
 export interface Props {
@@ -35,6 +36,10 @@ const { data, headings } = Astro.props;
 		<TutorialLayout content={data}>
 			<slot />
 		</TutorialLayout>
+		) : data.type === 'islands' ? (
+		<IslandsLayout content={data}>
+			<slot />
+		</IslandsLayout>
 	) : data.type === 'migration' ? (
 		<MigrationLayout content={data} headings={headings}>
 			<slot />
